# Softwares

./: .gitignore  README.md  ScreenToGif.2.9.Setup.msi
GnuWin32/man/cat1/: egrep.1.txt.lnk  fgrep.1.txt.lnk
GnuWin32/manifest/: util-linux-ng-2.14.1-src.mft  util-linux-ng-2.14.1-src.ver
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1/: Makefile  Makefile.mingw  config.h  config.status
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1-src/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  configure.scan
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1-src/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1-src/config/: hexdump.c  hexdump.h  include-Makefile.am
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1-src/getopt/: Makefile.am  Makefile.in
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1-src/include/: Makefile.in  widechar.h
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1-src/lib/: Makefile.am  Makefile.in  err.c
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1-src/misc-utils/: Makefile.am  Makefile.in  ddate.c  whereis.c
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1-src/text-utils/: Makefile.am  Makefile.in  colcrt.c  display.c  hexdump.h  rev.c  tailf.c
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1/getopt/: Makefile
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1/getopt/.deps/: getopt-getopt.Po
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1/include/: Makefile
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1/lib/: Makefile
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1/lib/.deps/: err.Po
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1/misc-utils/: Makefile
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1/misc-utils/.deps/: ddate.Po  rename.Po  whereis.Po
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1/patches/: util-linux-ng-2.14.1-src-ch.diff
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1/po/: Makefile  Makefile.in  POTFILES
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1/resource/: col-res.rc  colcrt-res.rc  colrm-res.rc  ddate-res.rc  getopt-res.rc  hexdump-res.rc  line-res.rc  rename-res.rc  rev-res.rc  tailf-res.rc  whereis-res.rc
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1/text-utils/: Makefile
GnuWin32/src/util-linux-ng/2.14.1/util-linux-ng-2.14.1/text-utils/.deps/: col.Po  colcrt.Po  colrm.Po  conv.Po  display.Po  hexdump.Po  hexsyntax.Po  line.Po  odsyntax.Po  parse.Po  rev.Po  tailf.Po
