include $(top_srcdir)/config/include-Makefile.am

EXTRA_DIST = README.flushb

bin_PROGRAMS = ddate  rename whereis

ddate_SOURCES = ddate.c ddate-res.rc
rename_SOURCES = rename.c rename-res.rc
whereis_SOURCES = whereis.c whereis-res.rc

EXTRA_DIST += README.ddate README.namei README.namei2

dist_man_MANS = ddate.1 rename.1 whereis.1
